fix order signup and fetch status
